# autodiff-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
ad_backend_cpu/: Cargo.toml
ad_backend_cpu/src/: lib.rs  simd.rs
ad_backend_metal/: Cargo.toml
ad_backend_metal/src/: lib.rs  metal_impl.rs
ad_cli/: Cargo.toml
ad_cli/src/: main.rs
ad_core/: Cargo.toml  README.md
ad_core/src/: backward.rs  finite_diff.rs  lib.rs  node.rs  ops.rs
ad_nn/: Cargo.toml
ad_nn/examples/: xor.rs
ad_nn/src/: activations.rs  lib.rs  loss.rs
ad_nn/src/layers/: linear.rs  mod.rs
ad_nn/src/optim/: adam.rs  mod.rs  sgd.rs
ad_nn/tests/: backend_parity.rs  integration_tests.rs
ad_py/: Cargo.toml  pyproject.toml
ad_py/src/: lib.rs
ad_tensor/: Cargo.toml
ad_tensor/src/: backend.rs  backward.rs  lib.rs  node.rs  shape.rs  tensor.rs
docs/: how-autodiff-works.md
tests/: test_autodiff.py
