[package]
name = "ad_backend_cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CPU backend for ad_tensor with SIMD optimizations"

[dependencies]
ad_tensor = { path = "../ad_tensor" }

[dev-dependencies]
rand = "0.8"
