[package]
name = "ad_core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure Rust reverse-mode automatic differentiation engine"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"

[dependencies]

[dev-dependencies]
rand = "0.8"
